fixed align-items

--- a/src/components/MainContainer/Main.module.css
+++ b/src/components/MainContainer/Main.module.css
@@ -9,7 +9,7 @@
 }
 
 .main[data-variant="left"] {
-  align-items: baseline;
+  align-items: normal;
   text-align: left;
 }
 
